[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mijn-ista"
version = "0.1.0"
description = "Async Python client for the mijn.ista.nl energy portal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = ["aiohttp>=3.9.0"]
keywords = ["ista", "energy", "home-automation", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Framework :: AsyncIO",
]

[project.urls]
Homepage = "https://github.com/aalaei/ha-mijn-ista"
"Issue Tracker" = "https://github.com/aalaei/ha-mijn-ista/issues"
Source = "https://github.com/aalaei/ha-mijn-ista/tree/main/python-mijn-ista"

[tool.hatch.build.targets.wheel]
packages = ["src/mijn_ista"]
